tests/samples/compile_error/assignment_as_expr.co
fun main() {
  var x: int;
  if (x = 5) {
    write 42;
  }
}
